--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <span>❤️刻晴❤️</span>
     </div>
     <div class="box">
-        <img src="img\1.png" alt="hutao">
-        <span>❤️刻晴❤️</span>
+        <img src="img\0.jpg" alt="hutao">
+        <span>❤️猫猫❤️</span>
     </div>
     <div class="box">
         <img src="img\1.png" alt="hutao">
